# forge-core

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.local/forge-install/: .crates.toml  .crates2.json
artifacts/: self-evolution-cycle-02-report.json
artifacts/cycle-18/: changelog.md  cycle-report.json
artifacts/cycle-26/: cycle-26-summary.json
artifacts/reports/: forge-core-v0.4.123-report-2026-05-25.md
docs/: evolution-roadmap.md  forge-0.5-milestone.md  technical-definition.md  validation-report-2026-05-23.md
docs/reports/: forge-0.5-status-report-2026-05-25.md  forge-agent-integration-self-evolution-restart-2026-05-25.md  forge-core-self-evolution-first-run-2026-05-23.md  forge-core-v0.2.0-report-2026-05-23.md  forge-core-v0.3.0-report-2026-05-23.md  forge-core-v0.4.0-report-2026-05-23.md  forge-core-v0.4.1-report-2026-05-23.md  forge-core-v0.4.10-report-2026-05-23.md  forge-core-v0.4.100-report-2026-05-25.md  forge-core-v0.4.103-report-2026-05-25.md  forge-core-v0.4.104-report-2026-05-25.md  forge-core-v0.4.106-report-2026-05-25.md  forge-core-v0.4.108-report-2026-05-25.md  (+131 more)
skills/forge-core/: SKILL.md
src/: adapter.rs  artifact.rs  checkpoint.rs  cluster.rs  context.rs  execution.rs  executor.rs  graph.rs  handoff.rs  improve.rs  inspection.rs  intent.rs  interaction.rs  interactive.rs  ir.rs  lease.rs  lib.rs  main.rs  mcp.rs  milestone.rs  multimodal.rs  patch.rs  registry.rs  request.rs  runtime.rs  schedule.rs  scheduler.rs  self_evolve.rs  skill.rs  storage.rs  validation.rs  worker.rs  workflow.rs
tests/: forge_cli_contract.rs
(+3 files in other folders)
