[package]
name = "forge-core"
version = "0.4.17"
edition = "2021"
license = "MIT"
description = "High-performance AI-native workflow runtime for validated atomic execution graphs."
repository = "https://github.com/cardozoarthur/forge-core"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
